# MachineLearning

./: requirements.txt  setup.cfg
docs/: MachineLearning.rst  conf.py  conf.py~
docs/_build/doctrees/: MachineLearning.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  MachineLearning.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/MachineLearning/: functions.html  transformers.html
docs/_build/html/_sources/: index.rst.txt  modules.rst.txt
docs/_build/html/_static/: documentation_options.js
src/MachineLearning/: functions.py  transformers.py
tuto_hands_on_ML/chapter_10/: housing.py  housing.py~  mnist.py  mnist.py~
tuto_hands_on_ML/chapter_2/: main.py
tuto_hands_on_ML/chapter_3/: main.py
tuto_hands_on_ML/chapter_5/: housing.py  mnist.py
tuto_hands_on_ML/chapter_6/: forest.py  tree.py
tuto_hands_on_ML/chapter_7/: mnist.py
tuto_hands_on_ML/chapter_7/logs/: mnist.log.old
