[metadata]
name = MachineLearning
version = 0.0.0
license = MIT
description = My package for machine learning analyses
long_description = file: README.rst
author = Thomas Etourneau
author_email = thomas.etourneau@tutanota.com
classifiers=

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =

[options.packages.find]
where=src